2005-03-03  Roger While <simrw@sim-basis.de>

	* fileio.h, fileio.c :
	  LINAGE

2005-02-11  Roger While <simrw@sim-basis.de>

	* common.h, common.c, termio.c :
	  Reorder struct cob_module.
	  Fixes for ARGUMENT-VALUE/NUMBER -
	  discovered by Franklin Ankum.
	  Fix possible too small buffer.

2005-02-09  Roger While <simrw@sim-basis.de>

	* I must be going senile. Finally fix
	  cob_external_addr.

2005-02-08  Roger While <simrw@sim-basis.de>

	* Fix my cob_external_addr routine

2005-02-07  Roger While <simrw@sim-basis.de>

	* common.h, common.c : new routine cob_external_addr
	  Dynamically cater for EXTERNAL items at runtime

2005-02-04  Roger While <simrw@sim-basis.de>

	* termio.h, termio.c :
	  implement DISPLAY .. UPON ENVIRONMENT-VALUE
	  implement DISPLAY .. UPON ARGUMENT-NUMBER
	  implement ACCEPT .. FROM ARGUMENT-NUMBER
	  implement ACCEPT .. FROM ARGUMENT-VALUE

2005-01-07  Roger While <simrw@sim-basis.de>

	* move.c : Fix incorrect truncation when !binary_trunc
	  and moving binary to packed or edited fields
	* numeric.c : Fix arithmetic with numeric display
	  fields when !binary_trunc

2004-11-19  Roger While <simrw@sim-basis.de>

	* move.c : Fix incorrect truncation when !binary_trunc

2004-11-05  Roger While <simrw@sim-basis.de>

	* numeric.c : Handle arithmetic for !binary_trunc.

2004-11-04  Roger While <simrw@sim-basis.de>

	* move.c : Fix regression for NIST suite

2004-11-04  Bernard Giroud <bgiroud@open-cobol.org>
	* numeric.c (cob_decimal_get_binary) : reverted:
	  NIST test suite is no mre working.

2004-11-02  Bernard Giroud <bgiroud@open-cobol.org>
	* numeric.c (cob_decimal_get_binary) :
	  Worked around what I consider a bug in Gmp for getting
	  a long signed value.
	* Added checks for option binary-truncate from a
	  suggestion of Roger While.

2004-10-31  Roger While <simrw@sim-basis.de>

	* fileio.h : For I/O exceptions, has_status flag and slight
	  rearrangement of fields in cob_file structure.
