@@ -25,64 +25,66 @@
 #ifndef COB_BYTESWAP_H
 #define COB_BYTESWAP_H
 
+#include <sys/types.h>
+
 /* Basic bit swapping functions
  */
-#define COB_BSWAP_16_CONSTANT(val)	((unsigned short) (	\
-    (unsigned short) ((unsigned short) (val) >> 8) |		\
-    (unsigned short) ((unsigned short) (val) << 8)))
-#define COB_BSWAP_32_CONSTANT(val)	((unsigned long) (		\
-    (((unsigned long) (val) & (unsigned long) 0x000000ffU) << 24) |	\
-    (((unsigned long) (val) & (unsigned long) 0x0000ff00U) <<  8) |	\
-    (((unsigned long) (val) & (unsigned long) 0x00ff0000U) >>  8) |	\
-    (((unsigned long) (val) & (unsigned long) 0xff000000U) >> 24)))
-#define COB_BSWAP_64_CONSTANT(val)	((unsigned long long) (	\
-    (((unsigned long long) (val) &				\
-      (unsigned long long) 0x00000000000000ffULL) << 56) |	\
-    (((unsigned long long) (val) &				\
-      (unsigned long long) 0x000000000000ff00ULL) << 40) |	\
-    (((unsigned long long) (val) &				\
-      (unsigned long long) 0x0000000000ff0000ULL) << 24) |	\
-    (((unsigned long long) (val) &				\
-      (unsigned long long) 0x00000000ff000000ULL) <<  8) |	\
-    (((unsigned long long) (val) &				\
-      (unsigned long long) 0x000000ff00000000ULL) >>  8) |	\
-    (((unsigned long long) (val) &				\
-      (unsigned long long) 0x0000ff0000000000ULL) >> 24) |	\
-    (((unsigned long long) (val) &				\
-      (unsigned long long) 0x00ff000000000000ULL) >> 40) |	\
-    (((unsigned long long) (val) &				\
-      (unsigned long long) 0xff00000000000000ULL) >> 56)))
+#define COB_BSWAP_16_CONSTANT(val)	((u_int16_t) (	\
+    (u_int16_t) ((u_int16_t) (val) >> 8) |		\
+    (u_int16_t) ((u_int16_t) (val) << 8)))
+#define COB_BSWAP_32_CONSTANT(val)	((u_int32_t) (		\
+    (((u_int32_t) (val) & (u_int32_t) 0x000000ffU) << 24) |	\
+    (((u_int32_t) (val) & (u_int32_t) 0x0000ff00U) <<  8) |	\
+    (((u_int32_t) (val) & (u_int32_t) 0x00ff0000U) >>  8) |	\
+    (((u_int32_t) (val) & (u_int32_t) 0xff000000U) >> 24)))
+#define COB_BSWAP_64_CONSTANT(val)	((u_int64_t) (	\
+    (((u_int64_t) (val) &				\
+      (u_int64_t) 0x00000000000000ffULL) << 56) |	\
+    (((u_int64_t) (val) &				\
+      (u_int64_t) 0x000000000000ff00ULL) << 40) |	\
+    (((u_int64_t) (val) &				\
+      (u_int64_t) 0x0000000000ff0000ULL) << 24) |	\
+    (((u_int64_t) (val) &				\
+      (u_int64_t) 0x00000000ff000000ULL) <<  8) |	\
+    (((u_int64_t) (val) &				\
+      (u_int64_t) 0x000000ff00000000ULL) >>  8) |	\
+    (((u_int64_t) (val) &				\
+      (u_int64_t) 0x0000ff0000000000ULL) >> 24) |	\
+    (((u_int64_t) (val) &				\
+      (u_int64_t) 0x00ff000000000000ULL) >> 40) |	\
+    (((u_int64_t) (val) &				\
+      (u_int64_t) 0xff00000000000000ULL) >> 56)))
 
 /* Arch specific stuff for speed
  */
 #if defined (__GNUC__) && (__GNUC__ >= 2)
 #  if defined (__i386__)
-#    define COB_BSWAP_16_IA32(val)					\
-       (__extension__							\
-	({ register unsigned short __v, __x = ((unsigned short) (val));	\
-	   if (__builtin_constant_p (__x))				\
-	     __v = COB_BSWAP_16_CONSTANT (__x);				\
-	   else								\
-	     __asm__ ("rorw $8, %w0"					\
-		      : "=r" (__v)					\
-		      : "0" (__x)					\
-		      : "cc");						\
+#    define COB_BSWAP_16_IA32(val)				\
+       (__extension__						\
+	({ register u_int16_t __v, __x = ((u_int16_t) (val));	\
+	   if (__builtin_constant_p (__x))			\
+	     __v = COB_BSWAP_16_CONSTANT (__x);			\
+	   else							\
+	     __asm__ ("rorw $8, %w0"				\
+		      : "=r" (__v)				\
+		      : "0" (__x)				\
+		      : "cc");					\
 	    __v; }))
-#    define COB_BSWAP_32_IA32(val)					\
-       (__extension__							\
-	({ register unsigned long __v, __x = ((unsigned long) (val));	\
-	   if (__builtin_constant_p (__x))				\
-	     __v = COB_BSWAP_32_CONSTANT (__x);				\
-	   else								\
-	     __asm__ ("bswap %0"					\
-		      : "=r" (__v)					\
-		      : "0" (__x));					\
+#    define COB_BSWAP_32_IA32(val)				\
+       (__extension__						\
+	({ register u_int32_t __v, __x = ((u_int32_t) (val));	\
+	   if (__builtin_constant_p (__x))			\
+	     __v = COB_BSWAP_32_CONSTANT (__x);			\
+	   else							\
+	     __asm__ ("bswap %0"				\
+		      : "=r" (__v)				\
+		      : "0" (__x));				\
 	    __v; }))
 #    define COB_BSWAP_64_IA32(val)				\
        (__extension__						\
-	({ union { unsigned long long __ll;			\
-		   unsigned long __l[2]; } __w, __r;		\
-	   __w.__ll = ((unsigned long long) (val));		\
+	({ union { u_int64_t __ll;				\
+		   u_int32_t __l[2]; } __w, __r;		\
+	   __w.__ll = ((u_int64_t) (val));			\
 	   if (__builtin_constant_p (__w.__ll))			\
 	     __r.__ll = COB_BSWAP_64_CONSTANT (__w.__ll);	\
 	   else							\
@@ -96,32 +98,32 @@
 #    define COB_BSWAP_32(val) (COB_BSWAP_32_IA32 (val))
 #    define COB_BSWAP_64(val) (COB_BSWAP_64_IA32 (val))
 #  elif defined (__ia64__)
-#    define COB_BSWAP_16_IA64(val)					\
-       (__extension__							\
-	({ register unsigned short __v, __x = ((unsigned short) (val));	\
-	   if (__builtin_constant_p (__x))				\
-	     __v = COB_BSWAP_16_CONSTANT (__x);				\
-	   else								\
-	     __asm__ __volatile__ ("shl %0 = %1, 48 ;;"			\
-				   "mux1 %0 = %0, @rev ;;"		\
-				    : "=r" (__v)			\
-				    : "r" (__x));			\
+#    define COB_BSWAP_16_IA64(val)				\
+       (__extension__						\
+	({ register u_int16_t __v, __x = ((u_int16_t) (val));	\
+	   if (__builtin_constant_p (__x))			\
+	     __v = COB_BSWAP_16_CONSTANT (__x);			\
+	   else							\
+	     __asm__ __volatile__ ("shl %0 = %1, 48 ;;"		\
+				   "mux1 %0 = %0, @rev ;;"	\
+				    : "=r" (__v)		\
+				    : "r" (__x));		\
 	    __v; }))
-#    define COB_BSWAP_32_IA64(val)					\
-       (__extension__							\
-	 ({ register unsigned long __v, __x = ((unsigned long) (val));	\
-	    if (__builtin_constant_p (__x))				\
-	      __v = COB_BSWAP_32_CONSTANT (__x);			\
-	    else							\
-	     __asm__ __volatile__ ("shl %0 = %1, 32 ;;"			\
-				   "mux1 %0 = %0, @rev ;;"		\
-				    : "=r" (__v)			\
-				    : "r" (__x));			\
+#    define COB_BSWAP_32_IA64(val)				\
+       (__extension__						\
+	 ({ register u_int32_t __v, __x = ((u_int32_t) (val));	\
+	    if (__builtin_constant_p (__x))			\
+	      __v = COB_BSWAP_32_CONSTANT (__x);		\
+	    else						\
+	     __asm__ __volatile__ ("shl %0 = %1, 32 ;;"		\
+				   "mux1 %0 = %0, @rev ;;"	\
+				    : "=r" (__v)		\
+				    : "r" (__x));		\
 	    __v; }))
 #    define COB_BSWAP_64_IA64(val)				\
        (__extension__						\
-	({ register unsigned long long __v,			\
-	     __x = ((unsigned long long) (val));		\
+	({ register u_int64_t __v,				\
+	     __x = ((u_int64_t) (val));				\
 	   if (__builtin_constant_p (__x))			\
 	     __v = COB_BSWAP_64_CONSTANT (__x);			\
 	   else							\
@@ -133,26 +135,25 @@
 #    define COB_BSWAP_32(val) (COB_BSWAP_32_IA64 (val))
 #    define COB_BSWAP_64(val) (COB_BSWAP_64_IA64 (val))
 #  elif defined (__x86_64__)
-#    define COB_BSWAP_32_X86_64(val)					\
-       (__extension__							\
-	 ({ register unsigned long __v, __x = ((unsigned long) (val));	\
-	    if (__builtin_constant_p (__x))				\
-	      __v = COB_BSWAP_32_CONSTANT (__x);			\
-	    else							\
-	     __asm__ ("bswapl %0"					\
-		      : "=r" (__v)					\
-		      : "0" (__x));					\
+#    define COB_BSWAP_32_X86_64(val)				\
+       (__extension__						\
+	 ({ register u_int32_t __v, __x = ((u_int32_t) (val));	\
+	    if (__builtin_constant_p (__x))			\
+	      __v = COB_BSWAP_32_CONSTANT (__x);		\
+	    else						\
+	     __asm__ ("bswapl %0"				\
+		      : "=r" (__v)				\
+		      : "0" (__x));				\
 	    __v; }))
-#    define COB_BSWAP_64_X86_64(val)			\
-       (__extension__					\
-	({ register unsigned long long __v,		\
-	     __x = ((unsigned long long) (val));	\
-	   if (__builtin_constant_p (__x))		\
-	     __v = COB_BSWAP_64_CONSTANT (__x);		\
-	   else						\
-	     __asm__ ("bswapq %0"			\
-		      : "=r" (__v)			\
-		      : "0" (__x));			\
+#    define COB_BSWAP_64_X86_64(val)				\
+       (__extension__						\
+	({ register u_int64_t __v, __x = ((u_int64_t) (val));	\
+	   if (__builtin_constant_p (__x))			\
+	     __v = COB_BSWAP_64_CONSTANT (__x);			\
+	   else							\
+	     __asm__ ("bswapq %0"				\
+		      : "=r" (__v)				\
+		      : "0" (__x));				\
 	   __v; }))
      /* gcc seems to figure out optimal code for this on its own */
 #    define COB_BSWAP_16(val) (COB_BSWAP_16_CONSTANT (val))
