@@ -1,3 +1,8 @@
+2005-04-13  Keisuke Nishida  <knishida@open-cobol.org>
+
+	* byteswap.h: #include <sys/types.h>.  Use u_int16_t, u_int32_t, and
+	u_int64_t instead of unsigned short, etc.
+
 2005-03-03  Roger While <simrw@sim-basis.de>
 
 	* fileio.h, fileio.c :
